syntax = "proto3";

package storage;

option go_package = "github.com/chowyu12/gmq/proto/storage;storage";

// Storage Service - Storage service interface
service StorageService {
  // --- Message interface ---
  rpc WriteMessages(WriteMessagesRequest) returns (WriteMessagesResponse);
  rpc CreatePartition(CreatePartitionRequest) returns (CreatePartitionResponse);
  rpc GetPartition(GetPartitionRequest) returns (GetPartitionResponse);
  rpc ListPartitions(ListPartitionsRequest) returns (ListPartitionsResponse);
  rpc SetTTL(SetTTLRequest) returns (SetTTLResponse);

  // --- Consumer and consumer group state management (strong consistency storage) ---
  
  // Save/update consumer information
  rpc SaveConsumer(SaveConsumerRequest) returns (SaveConsumerResponse);
  // Get all consumers in a consumer group
  rpc GetConsumers(GetConsumersRequest) returns (GetConsumersResponse);
  // Delete consumer
  rpc DeleteConsumer(DeleteConsumerRequest) returns (DeleteConsumerResponse);
  
  // Update consumer group assignment information
  rpc UpdateGroupAssignment(UpdateGroupAssignmentRequest) returns (UpdateGroupAssignmentResponse);
  // Get consumer group assignment information
  rpc GetGroupAssignment(GetGroupAssignmentRequest) returns (GetGroupAssignmentResponse);

  // Atomic fetch: reads messages using Redis Consumer Group semantics
  rpc FetchMessages(FetchMessagesRequest) returns (FetchMessagesResponse);

  // Acknowledge processed messages (XACK)
  rpc AcknowledgeMessages(AcknowledgeMessagesRequest) returns (AcknowledgeMessagesResponse);

  // Claim timed-out pending messages (XCLAIM)
  rpc ClaimMessages(ClaimMessagesRequest) returns (ClaimMessagesResponse);
}

message ClaimMessagesRequest {
  string topic = 1;
  int32 partition_id = 2;
  string consumer_group = 3;
  string consumer_id = 4; // Consumer ID performing the claim
  int64 min_idle_time_ms = 5; // Minimum idle time before messages can be claimed
  int32 limit = 6;
}

message ClaimMessagesResponse {
  bool success = 1;
  string error_message = 2;
  repeated Message messages = 3;
}

message FetchMessagesRequest {
  string topic = 1;
  int32 partition_id = 2;
  string consumer_group = 3;
  string consumer_id = 4; // Consumer Group must specify a consumer ID
  int32 limit = 5;
}

message FetchMessagesResponse {
  bool success = 1;
  string error_message = 2;
  repeated Message messages = 3;
}

message AcknowledgeMessagesRequest {
  string topic = 1;
  int32 partition_id = 2;
  string consumer_group = 3;
  repeated int64 offsets = 4; // Offsets to acknowledge
}

message AcknowledgeMessagesResponse {
  bool success = 1;
  string error_message = 2;
  int64 count = 3; // Number of successfully acknowledged messages
}

// Message structure
message Message {
  reserved 1, 6, 7, 8, 9, 10;
  string topic = 2;
  int32 partition_id = 3;
  int64 offset = 4;
  bytes payload = 5;
}

message WriteMessagesRequest {
  repeated Message messages = 1;
}

message WriteMessagesResponse {
  bool success = 1;
  string error_message = 2;
  repeated int64 offsets = 3;
}

message CreatePartitionRequest {
  string topic = 1;
  int32 partition_id = 2;
}

message CreatePartitionResponse {
  bool success = 1;
  string error_message = 2;
}

message GetPartitionRequest {
  string topic = 1;
  int32 partition_id = 2;
}

message PartitionInfo {
  int32 id = 1;
  string topic = 2;
  int64 next_offset = 3;
  int64 message_count = 4;
}

message GetPartitionResponse {
  PartitionInfo partition = 1;
  bool success = 2;
  string error_message = 3;
}

message ListPartitionsRequest {
  string topic = 1;
}

message ListPartitionsResponse {
  repeated PartitionInfo partitions = 1;
  bool success = 2;
  string error_message = 3;
}

message SetTTLRequest {
  string topic = 1;
  int64 ttl_seconds = 2;
}

message SetTTLResponse {
  bool success = 1;
  string error_message = 2;
}

// --- Consumer management related messages ---

message ConsumerState {
  string consumer_id = 1;
  string consumer_group = 2;
  string topic = 3;
  repeated int32 assigned_partitions = 4;
  int64 last_heartbeat = 5;
}

message SaveConsumerRequest {
  ConsumerState consumer = 1;
}

message SaveConsumerResponse {
  bool success = 1;
  string error_message = 2;
}

message GetConsumersRequest {
  string consumer_group = 1;
  string topic = 2;
}

message GetConsumersResponse {
  repeated ConsumerState consumers = 1;
  bool success = 2;
  string error_message = 3;
}

message DeleteConsumerRequest {
  string consumer_id = 1;
  string consumer_group = 2;
  string topic = 3;
}

message DeleteConsumerResponse {
  bool success = 1;
  string error_message = 2;
}

message UpdateGroupAssignmentRequest {
  string consumer_group = 1;
  string topic = 2;
  map<int32, string> partition_assignment = 3; // partitionID -> consumerID
}

message UpdateGroupAssignmentResponse {
  bool success = 1;
  string error_message = 2;
}

message GetGroupAssignmentRequest {
  string consumer_group = 1;
  string topic = 2;
}

message GetGroupAssignmentResponse {
  map<int32, string> partition_assignment = 1;
  bool success = 2;
  string error_message = 3;
}
